Fixes flickering of Logo.

--- a/style.css
+++ b/style.css
@@ -35,5 +35,7 @@ body {
 
 
 .Logo {
+  height: 112px;
   margin-bottom: 2rem;
+  width: 112px;
 }
